[gd_scene load_steps=34 format=3 uid="uid://ccxuycx0wrkww"]

[ext_resource type="Script" uid="uid://cl3wfvxmlj36v" path="res://scripts/menu.gd" id="1_7tgs3"]
[ext_resource type="PackedScene" uid="uid://ct4ongs00y2e8" path="res://art/models/floor.glb" id="1_kfbsc"]
[ext_resource type="FontFile" uid="uid://bnbrhy3ui4hcs" path="res://art/ui/fonts/Bungee-Regular.ttf" id="1_sq0xk"]
[ext_resource type="PackedScene" uid="uid://diuf4ysd58lwj" path="res://art/models/character-male-e.glb" id="2_gbx6r"]
[ext_resource type="PackedScene" uid="uid://581fkfncav4r" path="res://levels/game.tscn" id="2_hepnu"]
[ext_resource type="PackedScene" uid="uid://u314npnfkxtw" path="res://art/models/box-small.glb" id="2_isekv"]
[ext_resource type="PackedScene" uid="uid://b7tk7vsuo4mij" path="res://art/models/structure-corner-inner.glb" id="3_6nun2"]
[ext_resource type="PackedScene" uid="uid://6sa0jkg1dpcd" path="res://art/models/box-long.glb" id="3_w05ww"]
[ext_resource type="PackedScene" uid="uid://d3m5ivu4q1nnd" path="res://art/models/structure-doorway-wide.glb" id="4_tbhb4"]
[ext_resource type="PackedScene" uid="uid://1xqly1idy830" path="res://art/models/door-wide-half.glb" id="5_sq0xk"]
[ext_resource type="PackedScene" uid="uid://vd3he2p4uukm" path="res://art/models/structure-wall.glb" id="6_a5bpp"]
[ext_resource type="Theme" uid="uid://cp8rplq3o7x85" path="res://art/ui/theme.tres" id="7_tbhb4"]
[ext_resource type="PackedScene" uid="uid://cyjt21e1c6nhw" path="res://levels/entities/scene_transition.tscn" id="10_5rvdw"]
[ext_resource type="PackedScene" uid="uid://dupw6vr5pmmt4" path="res://art/models/hat-hard.glb" id="10_w05ww"]
[ext_resource type="Script" uid="uid://b5de622hhnufx" path="res://scripts/high_score_label.gd" id="11_spb8n"]
[ext_resource type="PackedScene" uid="uid://b6tjvvjwk51j0" path="res://levels/entities/enemy_preview.tscn" id="15_27yha"]
[ext_resource type="Texture2D" uid="uid://p2bcbxnsps8t" path="res://art/ui/textures/inputs/keyboard_w.png" id="15_ne4sh"]
[ext_resource type="Texture2D" uid="uid://gluh4w8lbk47" path="res://art/ui/textures/inputs/keyboard_a.png" id="15_y2r5p"]
[ext_resource type="Texture2D" uid="uid://bthoofepfau8o" path="res://art/ui/textures/inputs/keyboard_s.png" id="17_8l6ni"]
[ext_resource type="Texture2D" uid="uid://djetbw4htr3g7" path="res://art/ui/textures/inputs/keyboard_d.png" id="18_g1lh4"]
[ext_resource type="Texture2D" uid="uid://ci16gdjai5q4j" path="res://art/ui/textures/inputs/keyboard_arrow_up.png" id="19_jjtcx"]
[ext_resource type="Texture2D" uid="uid://cbwodp5qcq4p1" path="res://art/ui/textures/inputs/keyboard_arrow_left.png" id="20_6glpw"]
[ext_resource type="Texture2D" uid="uid://7j2csxpaolqj" path="res://art/ui/textures/inputs/keyboard_arrow_down.png" id="21_27yha"]
[ext_resource type="Texture2D" uid="uid://c5o51p0gnyuj1" path="res://art/ui/textures/inputs/keyboard_arrow_right.png" id="22_5rvdw"]
[ext_resource type="Texture2D" uid="uid://dtkej8dbc35f2" path="res://art/ui/textures/inputs/xbox_stick_l_horizontal.png" id="23_8l6ni"]
[ext_resource type="Texture2D" uid="uid://b2taa6aak7ntw" path="res://art/ui/textures/inputs/xbox_stick_l_vertical.png" id="24_g1lh4"]
[ext_resource type="Texture2D" uid="uid://cjlrwq6rviilq" path="res://art/ui/textures/inputs/xbox_button_a.png" id="25_6glpw"]
[ext_resource type="Texture2D" uid="uid://cxvfr8tghov8t" path="res://art/ui/textures/inputs/keyboard_space_outline.png" id="26_27yha"]

[sub_resource type="Environment" id="Environment_bvm7p"]
ambient_light_source = 2
ambient_light_color = Color(0.234504, 0.243243, 0.311212, 1)

[sub_resource type="Animation" id="Animation_7tgs3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-1.18727, 1.0365, 0.369639)]
}

[sub_resource type="Animation" id="Animation_w05ww"]
resource_name = "title-beat"
length = 0.46
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(-1.18727, 1.0365, 0.369639), Vector3(-1.18727, 1.0365, 0.369639), Vector3(-1.187, 1.081, 0.37), Vector3(-1.18727, 1.0365, 0.369639)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7tgs3"]
_data = {
&"RESET": SubResource("Animation_7tgs3"),
&"title-beat": SubResource("Animation_w05ww")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g1lh4"]

[node name="Menu" type="Node3D" node_paths=PackedStringArray("play_button", "tutorial_panel", "scene_transition")]
script = ExtResource("1_7tgs3")
play_button = NodePath("UI/VBoxContainer/PlayButton")
game_scene = ExtResource("2_hepnu")
tutorial_panel = NodePath("UI/TutorialPanel")
scene_transition = NodePath("Entities/GameSceneTransition")

[node name="Environment" type="Node3D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="Environment"]
environment = SubResource("Environment_bvm7p")

[node name="TopLight" type="SpotLight3D" parent="Environment"]
transform = Transform3D(1, -5.42296e-05, 0.000908782, -0.000908683, 0.00180832, 0.999998, -5.58729e-05, -0.999998, 0.00180827, 0.690334, 4.24668, 0.981373)
light_energy = 2.415
light_indirect_energy = 1.61
shadow_enabled = true
shadow_bias = 0.238
shadow_normal_bias = 0.538
shadow_opacity = 0.7
spot_range = 6.97052
spot_angle = 53.2794

[node name="FrontLight" type="SpotLight3D" parent="Environment"]
transform = Transform3D(0.923842, 0.260049, -0.280875, -0.000576649, 0.734733, 0.678357, 0.382774, -0.626532, 0.678927, -0.238725, 0.894672, 1.40621)
light_energy = 0.869
light_indirect_energy = 1.61
shadow_bias = 0.711
shadow_normal_bias = 0.673
shadow_opacity = 0.7
spot_range = 2.77596
spot_angle = 39.4941

[node name="FillLight" type="SpotLight3D" parent="Environment"]
transform = Transform3D(-0.221844, -0.661548, 0.716338, -0.000576655, 0.734733, 0.678357, -0.975082, 0.150076, -0.163378, 1.13315, 0.894672, -0.107771)
light_color = Color(0.999969, 0.443339, 0.452701, 1)
light_energy = 0.869
light_indirect_energy = 1.61
shadow_bias = 0.711
shadow_normal_bias = 0.673
shadow_opacity = 0.7
spot_range = 2.64983
spot_angle = 39.5446

[node name="Level" type="Node3D" parent="."]

[node name="Boxes" type="Node3D" parent="Level"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.672522, -1.19209e-07, -0.386632)

[node name="box-small2" parent="Level/Boxes" instance=ExtResource("2_isekv")]
transform = Transform3D(0.992478, 0, -0.122424, 0, 1, 0, 0.122424, 0, 0.992478, -0.603242, 1.19209e-07, 0.141212)

[node name="box-small3" parent="Level/Boxes" instance=ExtResource("2_isekv")]
transform = Transform3D(0.504513, 0, -0.863404, 0, 0.771468, 0, 0.863404, 0, 0.504513, 0.136407, 0.512303, -0.248353)

[node name="box-small4" parent="Level/Boxes" instance=ExtResource("2_isekv")]
transform = Transform3D(-0.544873, 0.46983, 1.94324e-08, 3.05325e-08, -6.55315e-09, 0.652045, 0.838519, 0.305298, -1.94324e-08, -0.418506, 0.663098, -0.0461902)

[node name="box-long2" parent="Level/Boxes" instance=ExtResource("3_w05ww")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.259525, 0.258343, -0.348323)

[node name="box-long3" parent="Level/Boxes" instance=ExtResource("3_w05ww")]
transform = Transform3D(-0.306875, 0, -0.95175, 0, 1.3357, 0, 0.95175, 0, -0.306875, -0.765927, 5.96046e-08, 0.963786)

[node name="floor2" parent="Level" instance=ExtResource("1_kfbsc")]
transform = Transform3D(12, 0, 0, 0, 1, 0, 0, 0, 12, 0, 0, 0)

[node name="structure-corner-inner2" parent="Level" instance=ExtResource("3_6nun2")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -1.54783, 2.38419e-07, -0.680874)

[node name="structure-doorway-wide2" parent="Level" instance=ExtResource("4_tbhb4")]
transform = Transform3D(-1.40574, 0, 8.74228e-08, 0, 1, 0, -1.22894e-07, 0, -1, 0.282734, -4.76837e-07, -0.698256)

[node name="door-wide-half2" parent="Level" instance=ExtResource("5_sq0xk")]
transform = Transform3D(-1.46939, 0, -8.74228e-08, 0, 1, 0, 1.28458e-07, 0, -1, 0.266854, 0.0221274, -1.50642)

[node name="structure-wall2" parent="Level" instance=ExtResource("6_a5bpp")]
transform = Transform3D(-1.54567e-07, 0, -1, 0, 1, 0, 3.53607, 0, -4.37114e-08, -1.54418, 0, 1.57537)

[node name="structure-wall3" parent="Level" instance=ExtResource("6_a5bpp")]
transform = Transform3D(-11.4412, 0, 8.74228e-08, 0, 1, 0, -1.00023e-06, 0, -1, 0.401593, 0, -6.18562)

[node name="Entities" type="Node3D" parent="."]

[node name="GameSceneTransition" parent="Entities" instance=ExtResource("10_5rvdw")]
next_scene = ExtResource("2_hepnu")

[node name="GameTitle" type="Label3D" parent="Entities"]
transform = Transform3D(0.74898, -0.00124796, 0.662592, 6.679e-05, 0.999999, 0.00180795, -0.662594, -0.00130986, 0.748978, -1.18727, 1.0365, 0.369639)
modulate = Color(0.97095, 0.398312, 5.19812e-06, 1)
outline_modulate = Color(0.0807833, 0.0807833, 0.0807833, 1)
text = "Jumpify"
font = ExtResource("1_sq0xk")
font_size = 50
outline_size = 27
horizontal_alignment = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Entities/GameTitle"]
libraries = {
&"": SubResource("AnimationLibrary_7tgs3")
}
autoplay = "title-beat"

[node name="Highscore" type="Label3D" parent="Entities"]
transform = Transform3D(0.999935, -8.75209e-05, 0.0114658, 6.679e-05, 0.999999, 0.00180795, -0.0114658, -0.00180706, 0.999932, -0.857392, 0.448843, -0.222752)
modulate = Color(0.318794, 0.159407, 0.154535, 1)
outline_modulate = Color(0.0807833, 0.0807833, 0.0807833, 1)
text = "menu.highscore"
font = ExtResource("1_sq0xk")
font_size = 15
outline_size = 0
horizontal_alignment = 0
script = ExtResource("11_spb8n")

[node name="Camera3D" type="Camera3D" parent="Entities"]
transform = Transform3D(0.900212, 0.0743351, 0.429059, -1.49012e-08, 0.985322, -0.170708, -0.435451, 0.153674, 0.886999, 0.407898, 0.287055, 1.40519)
fov = 49.6

[node name="character-male-e2" parent="Entities" instance=ExtResource("2_gbx6r")]
transform = Transform3D(0.999999, 0, -0.00158863, 0, 1, 0, 0.00158863, 0, 0.999999, 0.160799, 0, 0.0336279)

[node name="Skeleton3D" parent="Entities/character-male-e2/character-male-e" index="0"]
bones/4/rotation = Quaternion(0, 0, -0.382683, 0.92388)
bones/5/rotation = Quaternion(0, 0, 0.382683, 0.92388)

[node name="AnimationPlayer" parent="Entities/character-male-e2" index="1"]
autoplay = "idle"

[node name="BoneAttachment3D" type="BoneAttachment3D" parent="Entities"]
transform = Transform3D(0.999999, 0, -0.00158863, 0, 1, 0, 0.00158863, 0, 0.999999, 0.160803, 0.34325, 0.0312667)
bone_name = "head"
bone_idx = 6
use_external_skeleton = true
external_skeleton = NodePath("../character-male-e2/character-male-e/Skeleton3D")

[node name="hat-hard2" parent="Entities/BoneAttachment3D" instance=ExtResource("10_w05ww")]
transform = Transform3D(0.114694, 0, 1.56598, 0, 1, 0, -1.53254, 0, 0.117196, 0.00342692, 0.256712, 0.0656562)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("7_tbhb4")

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 52.0
offset_top = -144.0
offset_right = 289.0
offset_bottom = -68.0
grow_vertical = 0

[node name="PlayButton" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "menu.play"

[node name="HowToPlay" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "menu.tutorial"

[node name="ExitButton" type="Button" parent="UI/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
text = "Exit"

[node name="TutorialPanel" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ContentContainer" type="VBoxContainer" parent="UI/TutorialPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.134722
anchor_top = 0.132407
anchor_right = 0.865278
anchor_bottom = 0.867593
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="UI/TutorialPanel/ContentContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.972549, 0.4, 0, 1)
theme_override_font_sizes/font_size = 24
text = "menu.tutorial.title"
horizontal_alignment = 1

[node name="Separator3" type="HSeparator" parent="UI/TutorialPanel/ContentContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_g1lh4")

[node name="TutorialContainer" type="HBoxContainer" parent="UI/TutorialPanel/ContentContainer"]
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="EnemyPreview" type="SubViewportContainer" parent="UI/TutorialPanel/ContentContainer/TutorialContainer"]
custom_minimum_size = Vector2(135, 80)
layout_mode = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="UI/TutorialPanel/ContentContainer/TutorialContainer/EnemyPreview"]
own_world_3d = true
transparent_bg = true
handle_input_locally = false
msaa_3d = 3
size = Vector2i(135, 80)
render_target_update_mode = 4

[node name="EnemyPreview" parent="UI/TutorialPanel/ContentContainer/TutorialContainer/EnemyPreview/SubViewport" instance=ExtResource("15_27yha")]

[node name="TutorialLabel" type="Label" parent="UI/TutorialPanel/ContentContainer/TutorialContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "menu.tutorial.summary"
autowrap_mode = 2

[node name="Separator2" type="HSeparator" parent="UI/TutorialPanel/ContentContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
theme_override_styles/separator = SubResource("StyleBoxEmpty_g1lh4")

[node name="InputsContainer" type="HBoxContainer" parent="UI/TutorialPanel/ContentContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 80
alignment = 1

[node name="MovementContainer" type="VBoxContainer" parent="UI/TutorialPanel/ContentContainer/InputsContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="MovementControlsLabel" type="Label" parent="UI/TutorialPanel/ContentContainer/InputsContainer/MovementContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "menu.tutorial.movement"
horizontal_alignment = 1

[node name="MovementControls" type="HBoxContainer" parent="UI/TutorialPanel/ContentContainer/InputsContainer/MovementContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="WASD" type="VBoxContainer" parent="UI/TutorialPanel/ContentContainer/InputsContainer/MovementContainer/MovementControls"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0
alignment = 1

[node name="W" type="TextureRect" parent="UI/TutorialPanel/ContentContainer/InputsContainer/MovementContainer/MovementControls/WASD"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
texture = ExtResource("15_ne4sh")
expand_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/TutorialPanel/ContentContainer/InputsContainer/MovementContainer/MovementControls/WASD"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="A" type="TextureRect" parent="UI/TutorialPanel/ContentContainer/InputsContainer/MovementContainer/MovementControls/WASD/HBoxContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3
texture = ExtResource("15_y2r5p")
expand_mode = 2

[node name="S" type="TextureRect" parent="UI/TutorialPanel/ContentContainer/InputsContainer/MovementContainer/MovementControls/WASD/HBoxContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3
texture = ExtResource("17_8l6ni")
expand_mode = 2

[node name="D" type="TextureRect" parent="UI/TutorialPanel/ContentContainer/InputsContainer/MovementContainer/MovementControls/WASD/HBoxContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3
texture = ExtResource("18_g1lh4")
expand_mode = 2

[node name="Separator" type="VSeparator" parent="UI/TutorialPanel/ContentContainer/InputsContainer/MovementContainer/MovementControls"]
layout_mode = 2

[node name="Arrows" type="VBoxContainer" parent="UI/TutorialPanel/ContentContainer/InputsContainer/MovementContainer/MovementControls"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0
alignment = 1

[node name="Up" type="TextureRect" parent="UI/TutorialPanel/ContentContainer/InputsContainer/MovementContainer/MovementControls/Arrows"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
texture = ExtResource("19_jjtcx")
expand_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/TutorialPanel/ContentContainer/InputsContainer/MovementContainer/MovementControls/Arrows"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="Left" type="TextureRect" parent="UI/TutorialPanel/ContentContainer/InputsContainer/MovementContainer/MovementControls/Arrows/HBoxContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3
texture = ExtResource("20_6glpw")
expand_mode = 2

[node name="Down" type="TextureRect" parent="UI/TutorialPanel/ContentContainer/InputsContainer/MovementContainer/MovementControls/Arrows/HBoxContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3
texture = ExtResource("21_27yha")
expand_mode = 2

[node name="Right" type="TextureRect" parent="UI/TutorialPanel/ContentContainer/InputsContainer/MovementContainer/MovementControls/Arrows/HBoxContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3
texture = ExtResource("22_5rvdw")
expand_mode = 2

[node name="Separator2" type="VSeparator" parent="UI/TutorialPanel/ContentContainer/InputsContainer/MovementContainer/MovementControls"]
layout_mode = 2

[node name="JoystickControls" type="HBoxContainer" parent="UI/TutorialPanel/ContentContainer/InputsContainer/MovementContainer/MovementControls"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="JoystickHorizontalMovement" type="TextureRect" parent="UI/TutorialPanel/ContentContainer/InputsContainer/MovementContainer/MovementControls/JoystickControls"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("23_8l6ni")
expand_mode = 2

[node name="JoystickVerticalMovement" type="TextureRect" parent="UI/TutorialPanel/ContentContainer/InputsContainer/MovementContainer/MovementControls/JoystickControls"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("24_g1lh4")
expand_mode = 4

[node name="JumpContainer" type="VBoxContainer" parent="UI/TutorialPanel/ContentContainer/InputsContainer"]
layout_mode = 2

[node name="JumpControlsLabel" type="Label" parent="UI/TutorialPanel/ContentContainer/InputsContainer/JumpContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "menu.tutorial.jump"
horizontal_alignment = 1

[node name="JoystickControls" type="HBoxContainer" parent="UI/TutorialPanel/ContentContainer/InputsContainer/JumpContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="JoystickVerticalMovement" type="TextureRect" parent="UI/TutorialPanel/ContentContainer/InputsContainer/JumpContainer/JoystickControls"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("26_27yha")
expand_mode = 2

[node name="VSeparator" type="VSeparator" parent="UI/TutorialPanel/ContentContainer/InputsContainer/JumpContainer/JoystickControls"]
layout_mode = 2

[node name="JoystickHorizontalMovement" type="TextureRect" parent="UI/TutorialPanel/ContentContainer/InputsContainer/JumpContainer/JoystickControls"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("25_6glpw")
expand_mode = 2

[node name="Separator" type="HSeparator" parent="UI/TutorialPanel/ContentContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
theme_override_styles/separator = SubResource("StyleBoxEmpty_g1lh4")

[node name="OkButton" type="Button" parent="UI/TutorialPanel/ContentContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "menu.tutorial.ok"

[connection signal="pressed" from="UI/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/HowToPlay" to="." method="_on_how_to_play_pressed"]
[connection signal="pressed" from="UI/TutorialPanel/ContentContainer/OkButton" to="." method="_on_tutorial_close_pressed"]

[editable path="Entities/character-male-e2"]
